<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context="com.example.miret.newsapp.MainActivity"
  >
  <EditText
    android:id="@+id/content_edit_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/enter_search_content"
    android:inputType="text"
    />
  <Button
    android:id="@+id/find_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_find"
    />
  <EditText
    android:id="@+id/api_key_edit_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/enter_api_key"
    android:inputType="text"
    />
  <Button
    android:id="@+id/enter_api_key_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_key_button"
    />
</LinearLayout>
