<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context="com.example.miret.newsapp.MainActivity"
  >
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:gravity="center_horizontal"
    android:text="@string/hello_in_this_page_you_can_choose_search_content_just_enter_the_theme_you_are_interested_in"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="24sp"
    />
  <EditText
    android:id="@+id/content_edit_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/enter_search_content"
    android:inputType="text"
    />
  <Button
    android:id="@+id/find_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_find"
    android:textColor="@color/colorPrimaryDark"
    />
</LinearLayout>
